--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@
 *.exe
 *.out
 *.app
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
